2008-12-09 Francesco Fumanti <francesco.fumanti@gmx.net>

    Fix accelerator for the 'start minimized' check box.

2008-12-09 Francesco Fumanti <francesco.fumanti@gmx.net>

    Change tab order in settings dialog.

2008-12-09 Francesco Fumanti <francesco.fumanti@gmx.net>

    Add option to start minimized. LP: #124625

2008-12-07 Francesco Fumanti <francesco.fumanti@gmx.net>

    Fix inconsistancy in trayicon gconf keyname.

2008-12-07 Francesco Fumanti <francesco.fumanti@gmx.net>

    Syncronize with revision 124 of lp:onboard.

2008-12-01 Francesco Fumanti <francesco.fumanti@gmx.net>

    Fix: a gconf key name for the trayicon.

2008-12-01 Francesco Fumanti <francesco.fumanti@gmx.net>

	Syncronize branch with revision 121 of lp:onboard.

2008-11-30 Francesco Fumanti <francesco.fumanti@gmx.net>

	Use correct gconf key name for the trayicon.
    
2008-11-30 Francesco Fumanti <francesco.fumanti@gmx.net>

	Store position and size to gconf for next start of onboard.
    
2008-11-29 Francesco Fumanti <francesco.fumanti@gmx.net>

	Fix infinite loop when resizing onboard window.

2008-11-27 Francesco Fumanti <francesco.fumanti@gmx.net>

	Make use of schemas moving keys from /apps/sok to /apps/onboard.

2008-11-27 Francesco Fumanti <francesco.fumanti@gmx.net>

	Add gconf schemas file.

2008-11-08 Francesco Fumanti <francesco.fumanti@gmx.net>

	Move .desktop files from debian folder to data folder.

2008-11-06 Francesco Fumanti <francesco.fumanti@gmx.net>

	Add my name to the AUTHORS file.

0.91.1 release - 28/2/08
    * typo

0.91 release - 27/2/08
    * Fixed trayicon.
    * Scanning mode no longer needs a restart to take effect.
    * Remove python-xml dependency.
    * Updated translations.

16/6/06
	* Reads key mapping from a second xml file.
	* Began sticky keys

17/6/06
	* Updated virtkey to accept keysysm
	* Removed flashy, but ultimately pointless mouse hover effects.
	* Cleaned up virtkey a bit (not enough)

18/6/06